force-app/main/default/objects/PNNL_Contracts__c/PNNL_Contracts__c.object-meta.xml
<CustomObject>
    <label>PNNL Contract</label>
    <nameField>
        <label>PNNL Contracts</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PNNL Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>