force-app/main/default/objects/PNNL_Contracts__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <label>Advance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Advance</fullName>
            </value>
            <value>
                <fullName>Partial Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>