force-app/main/default/objects/PNNL_Contracts__c/fields/Advance_Received__c.field-meta.xml
<CustomField>
    <fullName>Advance_Received__c</fullName>
    <label>Advance Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>