force-app/main/default/objects/PNNL_Contracts__c/fields/Anticipatory_Amount__c.field-meta.xml
<CustomField>
    <fullName>Anticipatory_Amount__c</fullName>
    <label>Anticipatory Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>