force-app/main/default/objects/PNNL_Contracts__c/fields/Anticipatory_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipatory_Approved_Date__c</fullName>
    <label>Anticipatory Approved Date</label>
    <type>Date</type>
</CustomField>