force-app/main/default/objects/PNNL_Contracts__c/fields/Anticipatory_Note__c.field-meta.xml
<CustomField>
    <fullName>Anticipatory_Note__c</fullName>
    <label>Anticipatory Note</label>
    <type>TextArea</type>
</CustomField>