force-app/main/default/objects/PNNL_Contracts__c/fields/Backup_Level_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>Backup_Level_Descriptions__c</fullName>
    <label>Backup Level Descriptions</label>
    <type>TextArea</type>
</CustomField>