force-app/main/default/objects/PNNL_Contracts__c/fields/Balance_Order2__c.field-meta.xml
<CustomField>
    <fullName>Balance_Order2__c</fullName>
    <label>Balance Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>