force-app/main/default/objects/PNNL_Contracts__c/fields/Balance_Order__c.field-meta.xml
<CustomField>
    <fullName>Balance_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Order</label>
    <type>Checkbox</type>
</CustomField>