force-app/main/default/objects/PNNL_Contracts__c/fields/BETC_Code__c.field-meta.xml
<CustomField>
    <fullName>BETC_Code__c</fullName>
    <label>BETC Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISGF</fullName>
            </value>
            <value>
                <fullName>DISNGF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>