force-app/main/default/objects/PNNL_Contracts__c/fields/Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Code__c</fullName>
    <label>Billing Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>