force-app/main/default/objects/PNNL_Contracts__c/fields/Billing_Sponsor_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sponsor_Code__c</fullName>
    <formula>Proposal__r.Funding_Client__r.Client_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Sponsor Code</label>
    <type>Text</type>
</CustomField>