force-app/main/default/objects/PNNL_Contracts__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>DOEPAC</fullName>
            </value>
            <value>
                <fullName>G-Invoicing</fullName>
            </value>
            <value>
                <fullName>IPAC</fullName>
            </value>
            <value>
                <fullName>NICRW</fullName>
            </value>
            <value>
                <fullName>Non-Fed SPP</fullName>
            </value>
            <value>
                <fullName>SIPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>