force-app/main/default/objects/PNNL_Contracts__c/fields/BOA_Number__c.field-meta.xml
<CustomField>
    <fullName>BOA_Number__c</fullName>
    <label>BOA Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>