force-app/main/default/objects/PNNL_Contracts__c/fields/Budget_and_Reporting_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_and_Reporting_Code__c</fullName>
    <formula>Proposal__r.B_R__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget and Reporting Code</label>
    <type>Text</type>
</CustomField>