force-app/main/default/objects/PNNL_Contracts__c/fields/Budget_Reporting_Code2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Reporting_Code2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget &amp; Reporting Code</label>
    <referenceTo>Budget_Reporting_Code__c</referenceTo>
    <relationshipLabel>PNNL Contracts</relationshipLabel>
    <relationshipName>PNNL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>