force-app/main/default/objects/PNNL_Contracts__c/fields/Client_Contract_Representative__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contract Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PNNL Contracts</relationshipLabel>
    <relationshipName>PNNL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>