force-app/main/default/objects/PNNL_Contracts__c/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>Client Reference</label>
    <length>6</length>
    <type>Text</type>
</CustomField>