force-app/main/default/objects/PNNL_Contracts__c/fields/Client_Technical_Rep__c.field-meta.xml
<CustomField>
    <fullName>Client_Technical_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor Technical Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Technical Rep</relationshipLabel>
    <relationshipName>PNNL_Contact2</relationshipName>
    <type>Lookup</type>
</CustomField>