force-app/main/default/objects/PNNL_Contracts__c/fields/Close_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Out_Date__c</fullName>
    <label>Close Out Date</label>
    <type>Date</type>
</CustomField>