force-app/main/default/objects/PNNL_Contracts__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <defaultValue>DATE(2023,09,30)</defaultValue>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>