force-app/main/default/objects/PNNL_Contracts__c/fields/Cont_Admin__c.field-meta.xml
<CustomField>
    <fullName>Cont_Admin__c</fullName>
    <label>Cont Admin</label>
    <length>3</length>
    <type>Text</type>
</CustomField>