force-app/main/default/objects/PNNL_Contracts__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract #</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>