force-app/main/default/objects/PNNL_Contracts__c/fields/Contract_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account_Number__c</fullName>
    <label>Contract Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>