force-app/main/default/objects/PNNL_Contracts__c/fields/Contract_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administrator__c</fullName>
    <formula>Proposal__r.Contract_Specialist2__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Administrator</label>
    <type>Text</type>
</CustomField>