force-app/main/default/objects/PNNL_Contracts__c/fields/Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount__c</fullName>
    <label>Contract Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>