force-app/main/default/objects/PNNL_Contracts__c/fields/Contract_Client__c.field-meta.xml
<CustomField>
    <fullName>Contract_Client__c</fullName>
    <formula>Proposal__r.Contract_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Client</label>
    <type>Text</type>
</CustomField>