force-app/main/default/objects/PNNL_Contracts__c/fields/Contract_Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contract_Client_Reference__c</fullName>
    <label>Sponsor Agreement Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>