force-app/main/default/objects/PNNL_Contracts__c/fields/CPS__c.field-meta.xml
<CustomField>
    <fullName>CPS__c</fullName>
    <label>CPS#</label>
    <length>6</length>
    <type>Text</type>
</CustomField>