force-app/main/default/objects/PNNL_Contracts__c/fields/CRADA2__c.field-meta.xml
<CustomField>
    <fullName>CRADA2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRADA</label>
    <referenceTo>CRADA__c</referenceTo>
    <relationshipLabel>PNNL Contracts</relationshipLabel>
    <relationshipName>PNNL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>