force-app/main/default/objects/PNNL_Contracts__c/fields/CRADA__c.field-meta.xml
<CustomField>
    <fullName>CRADA__c</fullName>
    <label>CRADA #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>