force-app/main/default/objects/PNNL_Contracts__c/fields/FAC__c.field-meta.xml
<CustomField>
    <fullName>FAC__c</fullName>
    <label>FAC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>