force-app/main/default/objects/PNNL_Contracts__c/fields/Fee_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount2__c</fullName>
    <formula>Contract_Amount__c  *  Project_Allocation__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>