force-app/main/default/objects/PNNL_Contracts__c/fields/Fin_Plan__c.field-meta.xml
<CustomField>
    <fullName>Fin_Plan__c</fullName>
    <label>Fin Plan</label>
    <length>3</length>
    <type>Text</type>
</CustomField>