force-app/main/default/objects/PNNL_Contracts__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <label>Fund Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>