force-app/main/default/objects/PNNL_Contracts__c/fields/Funding_Action__c.field-meta.xml
<CustomField>
    <fullName>Funding_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Action</label>
    <referenceTo>Funding_Action__c</referenceTo>
    <relationshipLabel>PNNL Contracts</relationshipLabel>
    <relationshipName>PNNL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>