force-app/main/default/objects/PNNL_Contracts__c/fields/Funding_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>Funding_Action_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Funding Action Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>