force-app/main/default/objects/PNNL_Contracts__c/fields/Funding_Client__c.field-meta.xml
<CustomField>
    <fullName>Funding_Client__c</fullName>
    <formula>Proposal__r.Funding_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Client</label>
    <type>Text</type>
</CustomField>