force-app/main/default/objects/PNNL_Contracts__c/fields/Funding_Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Funding_Client_Reference__c</fullName>
    <label>Funding Client Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>