force-app/main/default/objects/PNNL_Contracts__c/fields/FY_Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>FY_Authorized_Amount__c</fullName>
    <label>FY Authorized Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>