force-app/main/default/objects/PNNL_Contracts__c/fields/G_Invoicing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>G_Invoicing_Document_Number__c</fullName>
    <label>G-Invoicing Document Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>