force-app/main/default/objects/PNNL_Contracts__c/fields/G_Invoicing_Line_of_Accounting__c.field-meta.xml
<CustomField>
    <fullName>G_Invoicing_Line_of_Accounting__c</fullName>
    <label>G-Invoicing Line of Accounting</label>
    <length>25</length>
    <type>Text</type>
</CustomField>