force-app/main/default/objects/PNNL_Contracts__c/fields/GL_Sub_Accounts__c.field-meta.xml
<CustomField>
    <fullName>GL_Sub_Accounts__c</fullName>
    <label>GL Sub-Accounts</label>
    <type>TextArea</type>
</CustomField>