force-app/main/default/objects/PNNL_Contracts__c/fields/Invoice_Address_Field__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address_Field__c</fullName>
    <label>Invoice Address Field</label>
    <type>TextArea</type>
</CustomField>