force-app/main/default/objects/PNNL_Contracts__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>IPAC</fullName>
            </value>
            <value>
                <fullName>G Invoicing</fullName>
            </value>
            <value>
                <fullName>DOEPAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>