force-app/main/default/objects/PNNL_Contracts__c/fields/Invoice_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_Description__c</fullName>
    <label>Invoice Type Description</label>
    <type>TextArea</type>
</CustomField>