force-app/main/default/objects/PNNL_Contracts__c/fields/IPAC_Line_of_Accounting__c.field-meta.xml
<CustomField>
    <fullName>IPAC_Line_of_Accounting__c</fullName>
    <label>IPAC Line of Accounting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>