force-app/main/default/objects/PNNL_Contracts__c/fields/Local_Use__c.field-meta.xml
<CustomField>
    <fullName>Local_Use__c</fullName>
    <label>Local Use</label>
    <length>7</length>
    <type>Text</type>
</CustomField>