force-app/main/default/objects/PNNL_Contracts__c/fields/Master_Scope_of_Work_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Master_Scope_of_Work_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Scope of Work Proposal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.Master_Scope_of_Work__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PNNL Contracts (Master Scope of Work Proposal)</relationshipLabel>
    <relationshipName>PNNL_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>