force-app/main/default/objects/PNNL_Contracts__c/fields/MSW__c.field-meta.xml
<CustomField>
    <fullName>MSW__c</fullName>
    <label>MSW #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>