force-app/main/default/objects/PNNL_Contracts__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes / Billing Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>