force-app/main/default/objects/PNNL_Contracts__c/fields/Overrun__c.field-meta.xml
<CustomField>
    <fullName>Overrun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overrun</label>
    <type>Checkbox</type>
</CustomField>