force-app/main/default/objects/PNNL_Contracts__c/fields/PNNL_Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Fund_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PNNL_Fund_Code__c.PNNL_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PNNL_Fund_Code__c</referenceTo>
    <relationshipLabel>PNNL Contracts</relationshipLabel>
    <relationshipName>PNNL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>