force-app/main/default/objects/PNNL_Contracts__c/fields/PNNL_Limited_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Limited_Term_Date__c</fullName>
    <label>Limited Term Date</label>
    <type>Date</type>
</CustomField>