force-app/main/default/objects/PNNL_Contracts__c/fields/PNNL_Limited_Term_Funds__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Limited_Term_Funds__c</fullName>
    <label>Limited Term Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>