force-app/main/default/objects/PNNL_Contracts__c/fields/PNNL_SPP_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_SPP_Code__c</fullName>
    <formula>Funding_Action__r.PNNL_SPP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPP Code</label>
    <type>Text</type>
</CustomField>