force-app/main/default/objects/PNNL_Contracts__c/fields/Prior_FY_Carryover__c.field-meta.xml
<CustomField>
    <fullName>Prior_FY_Carryover__c</fullName>
    <label>Prior FY Carryover</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>