force-app/main/default/objects/PNNL_Contracts__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <label>Program Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>