force-app/main/default/objects/PNNL_Contracts__c/fields/Project_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Project_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Allocation</label>
    <referenceTo>Project_Allocation__c</referenceTo>
    <relationshipLabel>PNNL Contracts</relationshipLabel>
    <relationshipName>PNNL_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>