force-app/main/default/objects/PNNL_Contracts__c/fields/Report_Class__c.field-meta.xml
<CustomField>
    <fullName>Report_Class__c</fullName>
    <formula>Project__r.Report_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Class</label>
    <type>Text</type>
</CustomField>