force-app/main/default/objects/PNNL_Contracts__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <formula>Proposal__r.Scope_Temp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope #</label>
    <type>Text</type>
</CustomField>