force-app/main/default/objects/PNNL_Contracts__c/fields/Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Date__c</fullName>
    <formula>Project__r.Setup_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setup Date</label>
    <type>Date</type>
</CustomField>