force-app/main/default/objects/PNNL_Contracts__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <label>% Split</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>