force-app/main/default/objects/PNNL_Contracts__c/fields/SPP_Code__c.field-meta.xml
<CustomField>
    <fullName>SPP_Code__c</fullName>
    <label>SPP Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>