force-app/main/default/objects/PNNL_Contracts__c/recordTypes/ACT.recordType-meta.xml
<RecordType>
    <fullName>ACT</fullName>
    <active>true</active>
    <label>ACT</label>
</RecordType>