force-app/main/default/objects/PNNL_Contracts__c/recordTypes/DOE_Direct.recordType-meta.xml
<RecordType>
    <fullName>DOE_Direct</fullName>
    <active>true</active>
    <label>DOE Direct</label>
</RecordType>