force-app/main/default/objects/PNNL_Contracts__c/recordTypes/IWO.recordType-meta.xml
<RecordType>
    <fullName>IWO</fullName>
    <active>true</active>
    <label>IWO</label>
</RecordType>