force-app/main/default/objects/PNNL_Contracts__c/recordTypes/Non_DOE.recordType-meta.xml
<RecordType>
    <fullName>Non_DOE</fullName>
    <active>true</active>
    <label>Non-DOE</label>
</RecordType>