force-app/main/default/objects/PNNL_Contracts__c/validationRules/Advance_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Advance_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
TEXT(  Advance_Received__c ) = &quot;Yes&quot;,
ISBLANK(  Anticipatory_Amount__c  )), True, False)</errorConditionFormula>
    <errorDisplayField>Advance_Amount__c</errorDisplayField>
    <errorMessage>Please enter the amount of Advance Payment</errorMessage>
</ValidationRule>