force-app/main/default/objects/PNNL_Contracts__c/validationRules/G_Invoicing_Line_of_Accounting_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>G_Invoicing_Line_of_Accounting_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
TEXT( Invoice_Type__c ) = &quot;G Invoicing&quot;,
ISBLANK(  G_Invoicing_Line_of_Accounting__c  )), True, False)</errorConditionFormula>
    <errorDisplayField>G_Invoicing_Line_of_Accounting__c</errorDisplayField>
    <errorMessage>Please enter a G-Invoicing Line of Accounting</errorMessage>
</ValidationRule>