force-app/main/default/objects/PNNL_Contracts__c/validationRules/Invoice_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Address_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    AND(
        TEXT( Invoice_Type__c ) = &quot;Physical&quot;, 
        ISBLANK( Invoice_Address_Field__c )), True, False)</errorConditionFormula>
    <errorDisplayField>Invoice_Address_Field__c</errorDisplayField>
    <errorMessage>Please provide an invoice address</errorMessage>
</ValidationRule>