force-app/main/default/objects/PNNL_Contracts__c/validationRules/Invoice_Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
TEXT( Invoice_Type__c ) = &quot;Electronic&quot;,
ISBLANK( Invoice_Email_Address__c )), True, False)</errorConditionFormula>
    <errorDisplayField>Invoice_Email_Address__c</errorDisplayField>
    <errorMessage>Please provide an Invoice Email Address</errorMessage>
</ValidationRule>