force-app/main/default/objects/PNNL_Contracts__c/validationRules/PNNL_Contract_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>PNNL_Contract_Name</fullName>
    <active>true</active>
    <description>NNL Contract can&apos;t be edited after the record has been created.
Please Contact your System Administrator for assistance</description>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>PNNL Contract can&apos;t be edited after the record has been created.
Please Contact your System Administrator for assistance</errorMessage>
</ValidationRule>