force-app/main/default/objects/PNNL_Contracts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>